tests/programs/a1/local/invalid/floating_point_literals.java
public class floating_point_literals {
  protected float x = 6.022137e+23f;
  protected double y = 1e137;
}